--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
-    <div class="img"></div>
-    <div class="ricepe__description">
+    <div class="img container--mq">
+      <img src="/Recipe Page/assets/images/image-omelette.jpeg" alt="">
+    </div>
+
+    <div class="ricepe__description container">
       <h1 class="title">Simple Omelette Recipe</h1>
 
       <p>
@@ -30,8 +33,8 @@
       </p>
 
       <div class="preparation">
-        <h3 class="decription">Preparation time</h3>
-        <ul>
+        <h3 class="description">Preparation time</h3>
+        <ul class="list__preparation">
           <li>
             <span class="bold__font">Total</span>: Approximately 10 minutes
           </li>
@@ -41,7 +44,7 @@
       </div>
     </div>
 
-    <div class="ingredients">
+    <div class="ingredients container">
       <h2 class="subTitle">Ingredients</h2>
       <ul>
         <li>2-3 large eggs</li>
@@ -54,36 +57,36 @@
       </ul>
     </div>
 
-    <div class="instructions">
+    <div class="instructions container">
       <h2 class="subTitle">Instructions</h2>
       <ol>
         <li>
-          Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
+          <span class="bold__font">Beat the eggs:</span> In a bowl, beat the eggs with a pinch of salt and
           pepper until they are well mixed. You can add a tablespoon of water or
           milk for a fluffier texture.
         </li>
         <li>
-          Heat the pan: Place a non-stick frying pan over medium heat and add
+          <span class="bold__font">Heat the pan:</span> Place a non-stick frying pan over medium heat and add
           butter or oil.
         </li>
         <li>
-          Cook the omelette: Once the butter is melted and bubbling, pour in the
+          <span class="bold__font">Cook the omelette:</span>Once the butter is melted and bubbling, pour in the
           eggs. Tilt the pan to ensure the eggs evenly coat the surface.
         </li>
         <li>
-          Add fillings (optional): When the eggs begin to set at the edges but
+          <span class="bold__font">Add fillings (optional):</span> When the eggs begin to set at the edges but
           are still slightly runny in the middle, sprinkle your chosen fillings
           over one half of the omelette.
         </li>
         <li>
-          Fold and serve: As the omelette continues to cook, carefully lift one
+          <span class="bold__font">Fold and serve:</span> As the omelette continues to cook, carefully lift one
           edge and fold it over the fillings. Let it cook for another minute,
           then slide it onto a plate.
         </li>
-        <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+        <li><span class="bold__font">Enjoy:</span> Serve hot, with additional salt and pepper if needed.</li>
       </ol>
     </div>
-    <div class="nutrition">
+    <div class="nutrition container">
       <h2 class="subTitle">Nutrition</h2>
 
       <p>
@@ -92,16 +95,20 @@
       </p>
       <table>
         <tr>
-          <td>Calories 277kcal</td>
+          <td>Calories</td>
+          <td class="g">277kcal</td>
         </tr>
         <tr>
-          <td>Carbs 0g</td>
+          <td>Carbs</td>
+          <td class="g">0g</td>
         </tr>
         <tr>
-          <td>Protein 20g</td>
+          <td>Protein</td>
+          <td class="g">20g</td>
         </tr>
         <tr>
-          <td>Fat 22g</td>
+          <td>Fat</td>
+          <td class="g">22g</td>
         </tr>
       </table>
     </div>
